# Aethermoor

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  start.bat  start.sh
.claude/: launch.json
backend/: app.py  auth.py  config.py  errors.py  helpers.py  requirements.txt  stats.py  system_prompt.py
backend/db/: base_repository.py  expansion_logger.py  location_graph.py  location_memory.py  mock_db.py  player_state.py  schema.json  world_graph.py  world_manager.py  world_parser.py
backend/db/_archived/: location_parser.py
backend/db/applicators/: __init__.py  mechanical.py  processor.py  quest.py  spatial.py
backend/db/data/: character_equipment.json  character_skills.json  characters.json  classes.json  equipment.json  inventory.json  skills.json  users.json  world_seed.json
backend/db/repos/: __init__.py  character_repo.py  chat_repo.py  equipment_repo.py  quest_repo.py  skill_repo.py  user_repo.py
backend/db/rules_engine/: __init__.py  conditions.py  death.py  engine.py  formula.py  resolver.py  validator.py
backend/routes/: auth_routes.py  character_routes.py  chat_routes.py  gamedata_routes.py  inventory_routes.py  location_routes.py  quest_routes.py
backend/test/: applicators_text.py
db/data/memories/: char_d35a7be3_memories.json
examples/: __init__.py  basic_usage.py
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/: env.d.ts
frontend/src/components/: Layout.astro
llm_interface/: __init__.py  base.py
llm_interface/providers/: __init__.py  claude.py  custom.py  grok.py  openai.py
(+59 files in other folders)
